Fixed Scheduler Events Scrolling On Mobile
Scrolling did not work when starting the touch movement on a scheduler event. This has been fixed.

--- a/app/assets/stylesheets/custom/_classes_conference_scheduler.less
+++ b/app/assets/stylesheets/custom/_classes_conference_scheduler.less
@@ -25,6 +25,10 @@
   text-overflow: ellipsis;
 }
 
+.dhx_cal_container div {
+  touch-action: auto;
+}
+
 .conference-scheduler-event-s {
   background-color: @color-conference-schedule-session;
 }
